classDiagram
class EntityModel {
    - int id
    - str created_date
    - str updated_at
    + bool create()
    + bool update()
    + bool delete()
}

class User {
    + str first_name
    + str last_name
    + str email
    - str password
    + bool is_admin
    + bool register()
    + bool check_password(password: str)
    + bool login()
    + bool can_review(place_id: int)
}

class Place {
    - int owner_id
    + str title
    + str description
    + float price
    + float latitude
    + float longitude
    + list<Place> list()
    + list<Place> filter_by_location(location: str)
    + list<Place> filter_by_price(min_price: float, max_price: float)
}

class Review {
    - int user_id
    - int place_id
    + float rating
    + str comment
    + list<Review> list()
    + float get_average_rating(place_id: int)
}

class Amenity {
    + str name
    + str description
    + list<Amenity> list()
    + bool attach_to_place(place: Place)
    + bool detach_from_place(place: Place)
}

EntityModel <|-- User
EntityModel <|-- Place
EntityModel <|-- Review
EntityModel <|-- Amenity

User "1" *-- "*" Place : "owns"
Place "1" ..> "*" Review : "has"
Place "1" ..> "*" Amenity : "has"
User "1" *--	 "*" Review : "creates"